new cmake project structure

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,6 @@
-
-add_library(helper STATIC helper.cpp helper.hpp)
-
-target_include_directories(helper PUBLIC 
-    "${CMAKE_CURRENT_SOURCE_DIR}" 
-    "./random123/include/"
-    ${Boost_INCLUDE_DIRS}
-)
+# src/CMakeLists.txt
 
 add_executable(p_sfc_exe main.cpp)
-target_link_libraries(p_sfc_exe PRIVATE ${MPI_LIBRARIES} helper)
+target_link_libraries(p_sfc_exe PRIVATE P_SFC::helper)
+# (Opcional: o helper já publica cxx_std_20, então isto é redundante)
+# target_compile_features(p_sfc_exe PRIVATE cxx_std_20)
