--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/random123"]
-	path = src/random123
-	url = https://github.com/DEShawResearch/random123.git
+[submodule "third_party/random123"]
+	path = third_party/random123
+	url = third_party/https://github.com/DEShawResearch/random123.git
