--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,15 @@
 cmake_minimum_required(VERSION 3.22)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -g")
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-set(CMAKE_BUILD_TYPE Debug) 
-
+set(CMAKE_CXX_STANDARD 20) # Set CPP version
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF) # No compiler extensions
 
 project(P_SFC VERSION 0.0.1 LANGUAGES CXX)
 
-find_package(MPI REQUIRED CXX)
+# Dependencies
+find_package(MPI REQUIRED COMPONENTS CXX)
+find_package(Boost REQUIRED)
 
-include_directories(${MPI_CXX_INCLUDE_DIRS})
-
-if (MPI_FOUND)
-	message(STATUS "MPI_INC: [${MPI_CXX_INCLUDE_DIRS}]")
-endif (MPI_FOUND)
-
+add_subdirectory(third_party)
+add_subdirectory(libs)
 add_subdirectory(src)
