--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 # src/CMakeLists.txt
 
-add_executable(p_sfc_exe main.cpp)
+add_executable(p_sfc_exe cpu_main_particles.cpp)
 target_link_libraries(p_sfc_exe PRIVATE P_SFC::helper)
-# (Opcional: o helper já publica cxx_std_20, então isto é redundante)
-# target_compile_features(p_sfc_exe PRIVATE cxx_std_20)
+
+add_executable(gpu_p_sfc_exe gpu_main_particles.cpp)
+target_link_libraries(gpu_p_sfc_exe PRIVATE P_SFC::helper)
