first try creaitng particles in gpu

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,7 @@
 add_executable(p_sfc_exe cpu_main_particles.cpp)
 target_link_libraries(p_sfc_exe PRIVATE P_SFC::helper)
 
-add_executable(gpu_p_sfc_exe gpu_main_particles.cpp)
-target_link_libraries(gpu_p_sfc_exe PRIVATE P_SFC::helper)
+add_executable(gpu_p_sfc_exe gpu_main_particles.cu)
+target_link_libraries(gpu_p_sfc_exe PRIVATE P_SFC::helper CUDA::cudart)
+set_target_properties(gpu_p_sfc_exe PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+
