no more log dirs

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ scripts/*.out
 *.par
 scripts/*.par
 .ipynb_checkpoints/
-scripts/*_logdir/
+scripts/*_logdir*/
 scripts/*jwc
+scripts/
 scripts/core.jwb*.juwels.*
 results/
-
